--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndCondsAdmin_AdminPoliciesEnabled/adminPolicies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExprAndCondsAdmin_AdminPoliciesEnabled/adminPolicies.yaml
@@ -46,8 +46,11 @@ spec:
           from:
             - pods:
                 namespaceSelector:
-                    matchLabels:
-                        kubernetes.io/metadata.name: default
+                    matchExpressions:
+                        - key: kubernetes.io/metadata.name
+                          operator: In
+                          values:
+                            - default
                 podSelector: {}
           ports: null
     priority: 2
@@ -80,8 +83,11 @@ spec:
           to:
             - pods:
                 namespaceSelector:
-                    matchLabels:
-                        kubernetes.io/metadata.name: default
+                    matchExpressions:
+                        - key: kubernetes.io/metadata.name
+                          operator: In
+                          values:
+                            - default
                 podSelector:
                     matchExpressions:
                         - key: tag__Slytherin
@@ -115,8 +121,11 @@ spec:
           from:
             - pods:
                 namespaceSelector:
-                    matchLabels:
-                        kubernetes.io/metadata.name: default
+                    matchExpressions:
+                        - key: kubernetes.io/metadata.name
+                          operator: In
+                          values:
+                            - default
                 podSelector: {}
           ports: null
     priority: 4
@@ -149,8 +158,11 @@ spec:
           to:
             - pods:
                 namespaceSelector:
-                    matchLabels:
-                        kubernetes.io/metadata.name: default
+                    matchExpressions:
+                        - key: kubernetes.io/metadata.name
+                          operator: In
+                          values:
+                            - default
                 podSelector:
                     matchExpressions:
                         - key: tag__Hufflepuff
@@ -182,8 +194,11 @@ spec:
           to:
             - pods:
                 namespaceSelector:
-                    matchLabels:
-                        kubernetes.io/metadata.name: default
+                    matchExpressions:
+                        - key: kubernetes.io/metadata.name
+                          operator: In
+                          values:
+                            - default
                 podSelector: {}
     priority: 6
     subject:
@@ -209,8 +224,11 @@ spec:
           from:
             - pods:
                 namespaceSelector:
-                    matchLabels:
-                        kubernetes.io/metadata.name: default
+                    matchExpressions:
+                        - key: kubernetes.io/metadata.name
+                          operator: In
+                          values:
+                            - default
                 podSelector: {}
           ports: null
     priority: 7
