--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExternalWithTautology/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleExternalWithTautology/policies.yaml
@@ -97,7 +97,13 @@ metadata:
 spec:
     ingress:
         - from:
-            - podSelector: {}
+            - namespaceSelector:
+                matchExpressions:
+                    - key: kubernetes.io/metadata.name
+                      operator: In
+                      values:
+                        - default
+              podSelector: {}
     podSelector: {}
     policyTypes:
         - Ingress
