--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllow/policies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleInternalWithInterDenyAllow/policies.yaml
@@ -33,9 +33,15 @@ metadata:
 spec:
     egress:
         - to:
+            - namespaceSelector:
+                matchExpressions:
+                    - key: kubernetes.io/metadata.name
+                      operator: In
+                      values:
+                        - default
+              podSelector: {}
             - ipBlock:
                 cidr: 0.0.0.0/0
-            - podSelector: {}
     podSelector:
         matchExpressions:
             - key: VMs_within_IPs__10.0.0.0-24
@@ -93,7 +99,13 @@ metadata:
 spec:
     ingress:
         - from:
-            - podSelector:
+            - namespaceSelector:
+                matchExpressions:
+                    - key: kubernetes.io/metadata.name
+                      operator: In
+                      values:
+                        - default
+              podSelector:
                 matchExpressions:
                     - key: VMs_within_IPs__10.0.0.0-24
                       operator: Exists
@@ -115,9 +127,15 @@ metadata:
 spec:
     egress:
         - to:
+            - namespaceSelector:
+                matchExpressions:
+                    - key: kubernetes.io/metadata.name
+                      operator: In
+                      values:
+                        - default
+              podSelector: {}
             - ipBlock:
                 cidr: 0.0.0.0/0
-            - podSelector: {}
     podSelector:
         matchExpressions:
             - key: VMs_within_IPs__10.0.0.0-16
@@ -163,7 +181,13 @@ metadata:
 spec:
     ingress:
         - from:
-            - podSelector:
+            - namespaceSelector:
+                matchExpressions:
+                    - key: kubernetes.io/metadata.name
+                      operator: In
+                      values:
+                        - default
+              podSelector:
                 matchExpressions:
                     - key: VMs_within_IPs__10.0.0.0-16
                       operator: Exists
@@ -185,7 +209,13 @@ metadata:
 spec:
     egress:
         - to:
-            - podSelector:
+            - namespaceSelector:
+                matchExpressions:
+                    - key: kubernetes.io/metadata.name
+                      operator: In
+                      values:
+                        - default
+              podSelector:
                 matchExpressions:
                     - key: group__real-group
                       operator: DoesNotExist
@@ -208,9 +238,9 @@ metadata:
 spec:
     egress:
         - to:
+            - podSelector: {}
             - ipBlock:
                 cidr: 0.0.0.0/0
-            - podSelector: {}
     podSelector:
         matchExpressions:
             - key: VMs_within_IPs__172.16.10.10-16
@@ -281,7 +311,13 @@ metadata:
 spec:
     ingress:
         - from:
-            - podSelector:
+            - namespaceSelector:
+                matchExpressions:
+                    - key: kubernetes.io/metadata.name
+                      operator: In
+                      values:
+                        - default
+              podSelector:
                 matchExpressions:
                     - key: VMs_within_IPs__172.16.10.10-16
                       operator: Exists
@@ -304,9 +340,15 @@ metadata:
 spec:
     egress:
         - to:
+            - namespaceSelector:
+                matchExpressions:
+                    - key: kubernetes.io/metadata.name
+                      operator: In
+                      values:
+                        - default
+              podSelector: {}
             - ipBlock:
                 cidr: 0.0.0.0/0
-            - podSelector: {}
     podSelector:
         matchExpressions:
             - key: VMs_within_IPs__192.168.0.0-16
@@ -402,7 +444,13 @@ metadata:
 spec:
     ingress:
         - from:
-            - podSelector:
+            - namespaceSelector:
+                matchExpressions:
+                    - key: kubernetes.io/metadata.name
+                      operator: In
+                      values:
+                        - default
+              podSelector:
                 matchExpressions:
                     - key: VMs_within_IPs__192.168.0.0-16
                       operator: Exists
@@ -422,7 +470,13 @@ metadata:
 spec:
     egress:
         - to:
-            - podSelector:
+            - namespaceSelector:
+                matchExpressions:
+                    - key: kubernetes.io/metadata.name
+                      operator: In
+                      values:
+                        - default
+              podSelector:
                 matchExpressions:
                     - key: group__real-group
                       operator: Exists
@@ -449,7 +503,13 @@ metadata:
 spec:
     ingress:
         - from:
-            - podSelector:
+            - namespaceSelector:
+                matchExpressions:
+                    - key: kubernetes.io/metadata.name
+                      operator: In
+                      values:
+                        - default
+              podSelector:
                 matchExpressions:
                     - key: group__real-group
                       operator: Exists
