--- a/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsSimplerNonSymInOutAdmin_AdminPoliciesEnabled/adminPolicies.yaml
+++ b/pkg/synthesis/tests_expected_output/k8s_resources/ExampleHogwartsSimplerNonSymInOutAdmin_AdminPoliciesEnabled/adminPolicies.yaml
@@ -46,8 +46,11 @@ spec:
           from:
             - pods:
                 namespaceSelector:
-                    matchLabels:
-                        kubernetes.io/metadata.name: default
+                    matchExpressions:
+                        - key: kubernetes.io/metadata.name
+                          operator: In
+                          values:
+                            - default
                 podSelector:
                     matchExpressions:
                         - key: group__Gryffindor
@@ -85,8 +88,11 @@ spec:
           to:
             - pods:
                 namespaceSelector:
-                    matchLabels:
-                        kubernetes.io/metadata.name: default
+                    matchExpressions:
+                        - key: kubernetes.io/metadata.name
+                          operator: In
+                          values:
+                            - default
                 podSelector:
                     matchExpressions:
                         - key: group__Gryffindor
@@ -118,8 +124,11 @@ spec:
           from:
             - pods:
                 namespaceSelector:
-                    matchLabels:
-                        kubernetes.io/metadata.name: default
+                    matchExpressions:
+                        - key: kubernetes.io/metadata.name
+                          operator: In
+                          values:
+                            - default
                 podSelector:
                     matchExpressions:
                         - key: group__Slytherin
@@ -157,8 +166,11 @@ spec:
           to:
             - pods:
                 namespaceSelector:
-                    matchLabels:
-                        kubernetes.io/metadata.name: default
+                    matchExpressions:
+                        - key: kubernetes.io/metadata.name
+                          operator: In
+                          values:
+                            - default
                 podSelector:
                     matchExpressions:
                         - key: group__Slytherin
@@ -191,8 +203,11 @@ spec:
           to:
             - pods:
                 namespaceSelector:
-                    matchLabels:
-                        kubernetes.io/metadata.name: default
+                    matchExpressions:
+                        - key: kubernetes.io/metadata.name
+                          operator: In
+                          values:
+                            - default
                 podSelector: {}
     priority: 6
     subject:
@@ -218,8 +233,11 @@ spec:
           from:
             - pods:
                 namespaceSelector:
-                    matchLabels:
-                        kubernetes.io/metadata.name: default
+                    matchExpressions:
+                        - key: kubernetes.io/metadata.name
+                          operator: In
+                          values:
+                            - default
                 podSelector: {}
           ports: null
     priority: 7
